# let-me-do

./: CMakeLists.txt  README.md  install.bash  install_deps_apt.bash  let-me-do-polkit.bash  let-me-do.bash  let-me-do.desktop  let_me_do.bash  let_me_do.desktop  let_me_do.sh  let_me_do_polkit.bash
archlinux/: PKGBUILD
debian/: changelog  control  copyright
docs/: index.html
docs/fr/: index.html
po/: fr.po  generate-pot-file.bash  let-me-do.pot  let_me_do.pot
polkit/: org.freedesktop.let-me-do.policy  org.freedesktop.let_me_do.policy
